Nikola auto commit.
Nikola version: 8.1.1

--- a/posts/notebook-test.ipynb
+++ b/posts/notebook-test.ipynb
@@ -101,8 +101,7 @@
    "slug": "notebook-test",
    "tags": "",
    "title": "notebook test",
-   "type": "text",
-   "status": "draft"
+   "type": "text"
   }
  },
  "nbformat": 4,
