Nikola auto commit.
Nikola version: 8.1.2

--- a/posts/sunrise-sunset-part-one.ipynb
+++ b/posts/sunrise-sunset-part-one.ipynb
@@ -6,12 +6,9 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "*Sunrise, sunset*\n",
-    "\n",
-    "<i>Sunrise, sunset</i>\n",
-    "\n",
-    "*Swiftly flow the days…*\n",
-    "\n",
+    "*Sunrise, sunset*<br>\n",
+    "*Sunrise, sunset*<br>\n",
+    "*Swiftly flow the days…*<br>\n",
     "\n",
     "\n",
     "Through word-of-mouth and experience, everyone has a general idea of the best place in town to view a sunrise or sunset. Terra Modern wanted to do a low-stakes open source GIS project to brush up on our skills, so we decided to conduct a data-driven site suitability analysis that identifies the PERFECT place in Leon County to view a sunrise or sunset. The analysis is loosely based on a [tutorial by Scott Culotta](http://www.geo.utexas.edu/courses/371c/project/2019F/Culotta_GIS_Project.pdf) that uses ESRI software to find the best views in Cuyahoga County, Ohio. (Thanks for the idea, Scott!)\n",
@@ -116,6 +113,13 @@
     "There are ways to remove the black border or make it invisible, but it won’t affect the analysis if it’s left as is.  \n",
     "Speaking of... we’re now ready to conduct our analysis for identifying the perfect sunrise or sunset in Leon County. \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -142,10 +146,10 @@
    "description": "",
    "link": "",
    "slug": "sunrise-sunset-part-one",
+   "status": "draft",
    "tags": "",
    "title": "Sunrise Sunset: Part One",
-   "type": "text",
-   "status": "draft"
+   "type": "text"
   }
  },
  "nbformat": 4,
